Update input and select styles in index.html
Change input and select background color and styling.

--- a/index.html
+++ b/index.html
@@ -80,16 +80,20 @@ button{
 
 button.secondary{background:rgba(255,255,255,.15)}
 
-input,select{
+input, select{
   width:100%;
   padding:12px;
   margin:8px 0 16px;
   border-radius:14px;
   border:none;
-  background:rgba(255,255,255,.15);
+  background:rgba(20,20,30,.85);
   color:white;
   outline:none;
+  appearance:none;
+  -webkit-appearance:none;
+  -moz-appearance:none;
 }
+
 
 .question{margin:20px 0}
 
